# search-server

./: .gitignore  Makefile  README.md  details.txt  files.txt  ido.cpp  ido.out  makefile
algorithm/: ASTAR.h  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.cpp  DFS.h  MatrixNode.cpp  MatrixNode.h  Position.h  Searcher.h  SearcherData.cpp  Solution.cpp  Solution.h  a.out  main.cpp
benchmark/: benchmark_client.py  draw_result.py
benchmark/data/: ASTAR.out
cache_manager/: file_cache_manager.cpp  file_cache_manager.h
client_handler/: client_handler.h  test_client_handler.cpp
project_data/: matrix_test_output.txt
server_side/: serial_server.cpp  serial_server.h
solver/: solver.h  string_reverser.h
src/: CMakeLists.txt  main.cpp
src/adapter/: searcher_adapter.cpp  searcher_adapter.h
src/algorithm/: ASTAR.cpp  BFS.cpp  BestFirstSearch.cpp  CMakeLists.txt  DFS.cpp  MatrixNode.cpp  MatrixNode.h  Position.cpp  Problem.cpp  Problem.h  Searcher.cpp  Searcher.h  SearcherData.h  main.cpp
src/algorithm/_legacy/: SearcherData.cpp  SearcherData.h
src/algorithm/component/: MatrixNode.cpp  MatrixNode.h  Position.cpp  Position.h  Problem.cpp  Problem.h  Solution.cpp  Solution.h
src/algorithm/searcher/: ASTAR.cpp  ASTAR.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  DFS.cpp  DFS.h  Searcher.cpp  Searcher.h  SearcherState.cpp  SearcherState.h
src/boot/: boot.cpp  boot.h
src/cache_manager/: cache_manager.h  file_cache_manager.cpp  file_cache_manager.h  file_cache_manager_string_template.h
test/: benchmark_client.py  gen_matrix.py
(+37 files in other folders)
